ADD A POST COMPONENT (custom file input prob solved)

--- a/src/app/homecomponent/homecomponent.component.html
+++ b/src/app/homecomponent/homecomponent.component.html
@@ -3,3 +3,10 @@
         <app-userspost [postObj]="x" *ngFor="let x of userObj.allPost"></app-userspost>
     </div>
 </div>
+
+
+<div class="socialMediaButtons">
+    <div id="twitterButton" class="socialMediaButton">
+        <button routerLink="/new-post" class="btn btn-lg btn-outline-danger custom-circle-button">+</button>
+    </div>
+</div>
