--- a/src/app/create-post/create-post.component.html
+++ b/src/app/create-post/create-post.component.html
@@ -2,17 +2,18 @@
         <div class="jumbotron text-center">
             <h1 class="display-3">Upload a Post</h1>
     </div>
-    <form class="my-5 w-50 mx-auto">
+    <form class="my-5 w-50 mx-auto" (ngSubmit)="addAPost()"  #f="ngForm">
         <div class="custom-file">
-            <input type="file" class="custom-file-input" id="customFile" #localRefFile (change)="updateFileName(localRefFile,localRefLable)">
+            <input required ngModel #imgPath="ngModel"  name="imgPath" type="file" class="custom-file-input" id="customFile" #localRefFile (change)="updateFileName(localRefFile,localRefLable)">
             <label class="custom-file-label" for="customFile" #localRefLable>Choose file</label>
         </div>
         <div class="form-group my-2">
-            <input type="email" class="form-control" id="postTitle" aria-describedby="postTitle upload" placeholder="Enter title for the post">
+            <input required ngModel #postTitle="ngModel"  name="postTitle" type="text" class="form-control" id="postTitle" aria-describedby="postTitle upload" placeholder="Enter title for the post">
         </div>
         <div class="form-group my-2">
-            <textarea name="postDesc" class="form-control" id="postDesc" cols="30" rows="5">Post Description</textarea>
+            <textarea required ngModel #postDesc="ngModel"  name="postDesc" class="form-control" id="postDesc" cols="30" rows="5">Post Description</textarea>
         </div>
+        <button type="submit" class="btn btn-lg btn-success">Post</button>
     </form>
     
 </div>
