--- a/src/app/homecomponent/homecomponent.component.html
+++ b/src/app/homecomponent/homecomponent.component.html
@@ -1,6 +1,6 @@
 <div class="container my-5">
     <div class="row justify-content-center">
-        <app-userspost [postObj]="x" *ngFor="let x of userObj.allPost"></app-userspost>
+        <app-userspost [postObj]="x" *ngFor="let x of postServObj.allPost"></app-userspost>
     </div>
 </div>
 
