--- a/src/app/userauth/login/login.component.html
+++ b/src/app/userauth/login/login.component.html
@@ -1,8 +1,7 @@
 <form class="my-5 w-50 mx-auto" (ngSubmit)="login()" #f="ngForm">
     <div class="form-group">
-      <label for="exampleInputEmail1">Email address</label>
-      <input name="email" email required #email="ngModel" ngModel type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.(OR WILL WE ?)</small>
+      <label for="exampleInputEmail1">Email Username</label>
+      <input name="username" required #username="ngModel" ngModel type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter username">
     </div>
     <div class="form-group">
       <label for="exampleInputPassword1">Password</label>
