--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -16,7 +16,7 @@
           <li class="nav-item">
             <a class="nav-link" routerLinkActive="active" routerLink="profile">Profile</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" *ngIf="!userAuthObj.isLoggedIn">
             <a class="nav-link" routerLinkActive="active" routerLink="userauth">Login/Register</a>
           </li>
         </ul>
