--- a/src/app/userspost/userspost.component.html
+++ b/src/app/userspost/userspost.component.html
@@ -2,7 +2,7 @@
   <div class="card-header">
     <div class="row">
       <div class="col-sm-1">
-        <img src="https://i.imgur.com/hqXuRsh.png" style="width:30px;" class="img-round">
+        <img src="https://via.placeholder.com/1000" style="width:30px;" class="img-round">
         <!-- as of now static -->
       </div>
       <div class="col-sm-10">
