--- a/src/app/create-post/create-post.component.html
+++ b/src/app/create-post/create-post.component.html
@@ -1,10 +1,15 @@
 <div class="container my-5">
         <div class="jumbotron text-center">
             <h1 class="display-3">Upload a Post</h1>
-    </div>
-    <form class="my-5 w-50 mx-auto" (ngSubmit)="addAPost()"  #f="ngForm">
+        </div>
+        <div class="container text-center">
+            <div class="row text-center">
+                <img *ngIf="imageInput" [src]="imageInput" class="img img-responsive w-50 mx-auto" #imgPreview>
+            </div>
+        </div>
+    <form class="my-5 w-50 mx-auto" (ngSubmit)="addAPost($event)"  #f="ngForm">
         <div class="custom-file">
-            <input required ngModel #imgPath="ngModel"  name="imgPath" type="file" class="custom-file-input" id="customFile" #localRefFile (change)="updateFileName(localRefFile,localRefLable)">
+            <input required ngModel #imgPath="ngModel"  name="imgPath" type="file" class="custom-file-input" id="customFile" #localRefFile (change)="updateFileName($event,localRefFile,localRefLable)">
             <label class="custom-file-label" for="customFile" #localRefLable>Choose file</label>
         </div>
         <div class="form-group my-2">
