--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -13,8 +13,8 @@
           <li class="nav-item">
             <a class="nav-link" routerLinkActive="active" routerLink="/" [routerLinkActiveOptions]="{exact: true}">Home</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLinkActive="active" routerLink="profile">Profile</a>
+          <li class="nav-item" *ngIf="userAuthObj.isLoggedIn">
+            <a class="nav-link"  routerLinkActive="active" routerLink="profile">Profile</a>
           </li>
           <li class="nav-item" *ngIf="!userAuthObj.isLoggedIn">
             <a class="nav-link" routerLinkActive="active" routerLink="userauth">Login/Register</a>
