--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,19 +8,19 @@
       <ul class="navbar-nav mr-auto">
         
       </ul>
-      <form class="form-inline my-2 my-lg-0">
+      <form class="form-inline my-2 my-lg-0" (ngSubmit)="search_term()">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
           <li class="nav-item">
             <a class="nav-link" routerLinkActive="active" routerLink="/" [routerLinkActiveOptions]="{exact: true}">Home</a>
           </li>
           <li class="nav-item" *ngIf="userAuthObj.isLoggedIn">
-            <a class="nav-link"  routerLinkActive="active" routerLink="profile">Profile</a>
+            <a class="nav-link"  routerLinkActive="active" [routerLink]="['profile', userServObj.uuid ]">Profile</a>
           </li>
           <li class="nav-item" *ngIf="!userAuthObj.isLoggedIn">
             <a class="nav-link" routerLinkActive="active" routerLink="userauth">Login/Register</a>
           </li>
         </ul>
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" #searchBox>
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       </form>
     </div>
