ALPHA VERSION 1.0 LAUNCHED

--- a/src/app/homecomponent/homecomponent.component.html
+++ b/src/app/homecomponent/homecomponent.component.html
@@ -1,7 +1,9 @@
 
 <div class="container my-5" *ngIf="!userAuthObj.isLoggedIn">
-    <div class="jumotron my-5 text-center">
-        <h1 class="display-5">LOGING TO VIEW HOME PAGE BRO.</h1>
+    <div class="jumbotron my-5 text-center">
+        <h1 class="display-5 my-5">LOGING TO VIEW HOME PAGE BRO.</h1>
+        <hr class="w-75">
+        <a class="btn btn-md btn-outline-warning" routerLinkActive="active" routerLink="userauth/login">Login</a>
     </div>
 </div>
 
