--- a/src/app/userauth/login/login.component.html
+++ b/src/app/userauth/login/login.component.html
@@ -1,6 +1,6 @@
 <form class="my-5 w-50 mx-auto" (ngSubmit)="login()" #f="ngForm">
     <div class="form-group">
-      <label for="exampleInputEmail1">Email Username</label>
+      <label for="exampleInputEmail1">Username</label>
       <input name="username" required #username="ngModel" ngModel type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter username">
     </div>
     <div class="form-group">
