--- a/src/app/userprofile/userprofile.component.html
+++ b/src/app/userprofile/userprofile.component.html
@@ -16,9 +16,9 @@
         <div class="card-group">
             <div class="row">
                 <div class="col-md-4" *ngFor="let p of postServObj.userposts">
-                    <div class="card mx-1 my-2">
+                    <div class="card mx-1 my-2" style="max-width:1000px; max-height: 1000px;">
                         <img class="card-img-top" [src]="'http://localhost:8000/'+p.postLink" alt="p.postid" (click)="__DEBUG__(p.postid)">
-                      </div>
+                    </div>
                 </div>
             </div>
           </div>
