ALPHA VERSION FRONT END TWEAKS

--- a/src/app/create-post/create-post.component.html
+++ b/src/app/create-post/create-post.component.html
@@ -1,6 +1,6 @@
 <div class="container my-5">
         <div class="jumbotron text-center">
-            <h1 class="display-3">Upload a Post</h1>
+            <h1 class="display-3"><i class="fa fa-images"></i> Upload Your Post</h1>
         </div>
         <div class="container text-center">
             <div class="row text-center">
