--- a/src/app/homecomponent/homecomponent.component.css
+++ b/src/app/homecomponent/homecomponent.component.css
@@ -1,18 +1,18 @@
 .socialMediaButton{
   display: inline-block;
-  margin: 5px;
+  margin: 10px;
   transform: translateX(0px)
 }
   
 .socialMediaButtons {
   position: fixed;
-  bottom: 10px;
-  right: 10px;
+  bottom: 20px;
+  right: 20px;
   display: flex;
 }
 
 .custom-circle-button{
   width: 100%;
-  height: 100%;
+  height: 50px;
   border-radius: 50%
 }
