--- a/src/app/homecomponent/homecomponent.component.html
+++ b/src/app/homecomponent/homecomponent.component.html
@@ -21,6 +21,6 @@
 
 <div class="socialMediaButtons" *ngIf="userAuthObj.isLoggedIn">
     <div id="twitterButton" class="socialMediaButton">
-        <button routerLink="/new-post" class="btn btn-lg btn-outline-danger custom-circle-button">+</button>
+        <button routerLink="/new-post" class="btn btn-lg btn-outline-success custom-circle-button"><i class="fa fa-plus" style="font-size: 18px;"></i></button>
     </div>
 </div>
