ALPHA VERSION tweaks for Mobile view

--- a/src/app/userauth/userauth.component.html
+++ b/src/app/userauth/userauth.component.html
@@ -1,5 +1,7 @@
 <div class="container my-5">
-    <p class="display-3 text-center">User Authentication</p>
+    <div class="jumbotron">
+      <h3 class="text-center my-2">User Authentication</h3>
+    </div>
     <!-- AD MESSAGE -->
     <ul class="nav nav-tabs w-75 mx-auto">
         <li class="nav-item">
