--- a/src/app/userprofile/userprofile.component.html
+++ b/src/app/userprofile/userprofile.component.html
@@ -25,7 +25,7 @@
             <div class="row">
                 <div class="col-md-4" *ngFor="let p of postServObj.userposts">
                     <div class="mx-1 my-2 box">
-                        <img class="card-img-top cus_img img-thumbnail" [src]="'http://localhost:8000/'+p.postLink" alt="p.postid" (click)="__DEBUG__(p.postid)">
+                        <img class="card-img-top cus_img img-thumbnail" src="{{this.backendServiceObj.loadImage(p.postLink)}}" alt="p.postid" (click)="__DEBUG__(p.postid)">
                     </div>
                 </div>
             </div>
